--- a/automation/pom.xml
+++ b/automation/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>mathnasium</groupId>
-    <artifactId>maven</artifactId>
+    <artifactId>automation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
