removed selenium, add duplicate students

--- a/automation/student.properties
+++ b/automation/student.properties
@@ -1,14 +1,18 @@
-#Sun Feb 17 04:00:26 EST 2019
+#Sun Feb 17 15:40:29 EST 2019
 Sathvik\ Nuthalapati=1164097
 Abrar\ Hossain=506591
 Candace\ Woods=1213516
 Nicholas\ Le=1324643
 Arshaan\ Khan=506283
+Matthias\ Clarke=1307263
+Eshaan\ Vintha=480864
 Eshal\ Khan=1262924
+Srivathsav\ Sajja=506069
 Nikita\ Makulov=1183411
 Ethan\ Wentworth=506306
 Maya\ Pulliam=1136907
 Marika\ Galitzin=452787
+Yuvaraaj\ Gawande=505865
 Valentine\ De\ Pue=1066742
 Charvi\ Rathod=506625
 Sloane\ Field=1191961
@@ -30,12 +34,18 @@ Camille\ Rimbawa=506064
 Rafia\ Mohammed=1183642
 Ashna\ Jolad=506667
 Adhvitha\ Thallapureddy=506938
+Emma\ Yan=1342355
 Sophie\ Peterson=1064717
 Medha\ Kandadai=506839
+Mohith\ Gudipati=1344638
 Kate\ Downey=480648
 Sophia\ Clare=505906
 Erin\ Collins=1247178
 Isaac\ Kasozi=480580
+Grace\ Chirozzi=506898
+Adrianna\ Bruzzi=1286675
+Joey\ Kim=1336715
+Mickey\ Wubneh=1254396
 Afet\ Aliyeva=1288496
 Jonathan\ Cole=1161698
 Renee\ Brooks=452749
@@ -57,12 +67,14 @@ Evan\ Musonda=506208
 Shabib\ Uddin=506993
 Zainab\ Idowu=507039
 Satwik\ Sripurushottama=1137572
+Ishi\ Upadhyay=null
 Soumya\ Kundala=1319517
 Ellie\ Regnell=481119
 Shayan\ Mahmood=507019
 Simon\ Lopez=452690
 Cole\ Weber=1241611
 Sofia\ Sossa=929101
+Mitchell\ Suteerachai=1291982
 Nruthya\ Koutlekar=480717
 Vir\ Pratap\ Mattu=480916
 Micah\ Kriesberg=481482
@@ -72,8 +84,10 @@ Meeloni\ Vegad=660464
 Aashil\ Arora=1264281
 Adhi\ Ponraj=1136803
 Pooja\ Nagabhyru=506193
+Avika\ Agarwal=1227837
 Semhar\ Wright=452461
 Liam\ Anderson=1182626
+Sarah\ Blackwell=1063371
 Sebastian\ Clare=505905
 LyLypaw\ Ngia=1290551
 Tahmid\ Niloy=506908
@@ -83,6 +97,7 @@ Mohammad\ Vahora=506364
 Youshay\ Abbas=1165386
 Gabriela\ Khoury=1291457
 Fahad\ Shayar=506267
+Joel\ Amaya-\ Carpio=1339208
 Joseph\ Schlichting=1144590
 Nabeeha\ Abbas=506147
 Aryan\ Vegad=660461
@@ -112,10 +127,12 @@ Rod\ Djavan=1306226
 Allison\ Nichols=660505
 Binh-Nguyen\ Nguyen=1232972
 Pragyadipta\ Roy=1134278
+Nathanial\ Clarke=1307264
 Ria\ Sood=506754
 Haanah\ Fasihi=1232612
 Noah\ Milak=1305268
 Alina\ Kash=1318537
+Sophia\ Sikander=452843
 Dhruv\ Agarwal=506840
 Fatima\ Abdalla=1235940
 Sandra\ Zheng=452536
@@ -134,11 +151,13 @@ Sename\ Houemassou=452687
 Anjali\ Natarajan=480881
 Angel\ Villanueva=1064172
 Michael\ Bennett=1256515
+Eloise\ Weinstein=506107
 Ember\ Schell=505955
 Gurmann\ Mohil=505896
 Dilan\ Parikh=480931
 Sophia\ El-qorchi=1217466
 Maya\ Saini=481079
+Adhrith\ Kalluri=1227462
 Zoe\ Cardno=452840
 Emily\ Kavic=506994
 Kurt\ Schlichting=481031
@@ -154,16 +173,19 @@ Vivaan\ Bendala=1328591
 Zoha\ Qamar=1298291
 Namrata\ Dhanireddy=480841
 Nathalia\ Ballew=481018
+Viren\ Sharma=506212
 Saajid\ Mahmud=506033
 Charlie\ West=452792
 Sudeep\ Abburu=480624
 John\ Yang=452499
 Smridhi\ Surabhi=1264346
 Marlee\ Brooks-Lucas=1216882
+Hannah\ Lores=452837
 Priyanshi\ Konka=507100
 Hannah\ Ahn=1223734
 Eleina\ Kim=506742
 Saya\ Kalaria=656037
+Adithya\ Iyer=506248
 Zsuzsanna\ Juhasz=1162119
 Callista\ Bernhardt=515924
 Jhasmyn\ Pettiford=1247263
@@ -175,6 +197,8 @@ Arjun\ Sood=506753
 Amelie\ Maloveste=1135472
 Attila\ Juhasz=1162118
 Camille\ Rollins=452886
+Dominic\ Bakos=452383
+Dan\ Yniv=null
 Alina\ Kumar=784027
 Linh-Anh\ Nguyen=1232974
 Sahasra\ Batta=506602
@@ -187,6 +211,7 @@ Tasneem\ Kanchwala=1172596
 Riya\ Mahajan=480797
 Joshua\ Akinladenu=1151684
 Meheruba\ Hossain=506590
+Leslie\ Lin=506253
 Bron\ Benoy=506861
 Angela\ Farhat=480863
 Michael\ Havlik=506496
@@ -219,17 +244,21 @@ Bhavya\ Singh=1279749
 Noora\ Ahmed=452907
 Adriana\ Hanson=1149070
 Rayyan\ Ahmad=506000
+Julia\ Herdson=506311
 Aria\ Ma=1336403
 Rahim\ Kamara=480616
 Vikaas\ Srinivas=1269266
 Yana\ Kohli=480956
 Aria\ Haghighat=782225
 Aarnav\ Jadhav=506196
+Tanu\ Raj=1281694
+Chloe\ Hayden=1342692
 Aanya\ Grover=1250767
 Aishwarya\ Ponraj=1133887
 Naomi\ Diaz-Flores=1065504
 Mason\ Smith=452678
 Aarya\ Thurai=506733
+Pavan\ Sajja=506070
 Devani\ Shah=480925
 Michael\ Davis=1223778
 Shamiq\ Khan=507185
@@ -238,6 +267,7 @@ Chalie\ Thornton=1291040
 Jayanth\ Poreddy=1292351
 Arshia\ Mondal=507176
 Balpreet\ Matta=480640
+Rafiya\ Channu=1127605
 Yeonwoo\ Kim=1240577
 Isabelle\ Nagle=506467
 Francis\ Mureithi=1340401
@@ -249,9 +279,11 @@ Arnav\ Chaudhary=506228
 Shane\ Zheng=1175822
 Lilia\ Faraji=1141732
 Afreen\ Reza=481110
+Anushka\ Parab=505602
 Nysa\ Savla=1197480
 Ariadne\ Dimitoglou=452591
 Alanis\ Peronet=481010
+Sety\ =1232183
 Kaleb\ Temesgen=506791
 Nolan\ McEvoy=1230862
 Arjun\ Hariram=507055
@@ -259,9 +291,11 @@ Greeshma\ Tarimala=1242617
 Xavier\ Latham=1211443
 Isabelle\ Skinner=452497
 Agga\ Aung=480768
+Tomohito\ Nair=452856
 Sanaz\ Singh=507131
 Jahnavi\ Das=480900
 Ryan\ Hsieh=1217916
+Maryam\ Farooqui=null
 Ashna\ Verma=452447
 Zahra\ Gill=506281
 Christopher\ Jung=1266412
@@ -270,7 +304,9 @@ Ahana\ Roy=506924
 Lauren\ Lessing=1235959
 Lyla\ Cho=1212081
 Simar\ Saini=1243830
+Bryce\ Higgs=925725
 Nihitha\ Manmohan=506703
+Abdul\ Idowu=507037
 Tea-Lee\ Irby=452805
 Elise\ Nwulia=507097
 Ali\ Abulseoud=659400
@@ -294,6 +330,7 @@ Reina\ Kim=506743
 Aliki\ Dimitoglou=452592
 Ahmad\ Abulseoud=659401
 Edward\ Parker=506379
+Omar\ Farooqui=507058
 Laith\ Zaghari=1271363
 Benjamin\ Manuel=1184137
 Margo\ Dandridge=507174
@@ -310,6 +347,7 @@ Lucas\ Walters=1329211
 Ragib\ Ahanaf=506700
 Sharon\ Perera=1282976
 Nasreen\ Naqvi=1133506
+Cyril\ Lyskowski=1339383
 Tylayah\ Howell-Bey=1342013
 Ava\ Gordon=1177084
 Kyle\ Pagkatipunan=506960
@@ -324,6 +362,7 @@ Haroon\ Kamal=506292
 Trajan\ Robeson=1229502
 Mansi\ Satya=505878
 Joaquin\ Moen=1235922
+Sidhaarth\ Raghunath=1299407
 Hasini\ Ravuri=480890
 Dev\ Gill=1322893
 Surya\ Natarajan=480882
@@ -355,6 +394,7 @@ Laila\ Abulseoud=659402
 Samaira\ Hammond=506920
 Anvita\ Airani=1342017
 Michael\ Mureithi=1340412
+Lirui\ Fu=1279421
 Nelly\ Sypowicz=1167067
 Gurnoor\ Sodhi=1324416
 Arthur\ Pagan=506182
@@ -383,10 +423,13 @@ Faezaan\ Ansari=1276436
 Ernest\ Kessy=506004
 Aaron\ Abedin=507079
 Abhinav\ Chenutula=507107
+Ishika\ Kathuria=1347392
 Alejandra\ Urquiaga=507122
 Neeomi\ Desai=506353
 Zain\ Syed=662484
 Kabir\ Sayal=480802
+Vivek\ Majumdar=662869
+Mikaela\ Stewart=1303415
 Shayaan\ Shibily=1339837
 Aashar\ Malik=1234757
 Savir\ Avu=1184152
@@ -409,8 +452,10 @@ Dia\ Gill=1322895
 Gopal\ Yegnasubramanian=506697
 Maahir\ Padder=506658
 Eunjae\ Lee=1316566
+Siddhartha\ Nair=452855
 William\ Skinner=452496
 Nicole\ Khizder=481065
+Daniel\ Bass=480879
 Makai\ Stewart=480854
 Riya\ Lakhanpal=452300
 Jayant\ Kari=507089
@@ -421,6 +466,7 @@ Alexander\ Debenedictis=505963
 Anya\ Precil=1257055
 Adam\ Abdalla=1235944
 Sara\ Gajengi=506921
+Prannya\ Karri=505927
 Viraaj\ Ghariyal=480908
 Mackenzie\ Barker=1277421
 Trishen\ Korabathina=1290554
@@ -429,10 +475,12 @@ Madeline\ Springer=452801
 Adekemi\ Otolorin=520604
 Jessica\ Jackson=1201382
 Ramisa\ Islam=506068
+Chaeyi\ Kim=1287421
 Farhan\ Shakib=506266
 Adhithya\ Kasiviswanathan=1293488
 David\ Hsieh=452772
 Danielle\ Conklin=452776
+Anouk\ Pillai=452836
 Ian\ Ko=1318638
 Allison\ Yhim=506763
 Hrishikesh\ P\ Raghunath=1299406
@@ -448,6 +496,7 @@ Aryan\ Parikh=505849
 Anisha\ Shirgur=506802
 Audrey\ Lessing=1235960
 Sachika\ Roy=1218433
+Chaitra\ Bhumula=505898
 Akshitaa\ Jay=506042
 Ryan\ Basnet=1287055
 Allison\ Yee=1172505
@@ -458,6 +507,7 @@ Saranya\ Medavarapu=1225406
 Enzo\ Alvarado=1145538
 Avani\ Singavarapu=1169428
 Saanika\ Shirgur=506801
+Stella\ Chang=452455
 Evollea\ Noutcha=480826
 Anvitha\ Thota=1227887
 Christopher\ Beavers=452590
@@ -477,6 +527,8 @@ Matthew\ Kong=506929
 Gabriel\ Rincon=1269908
 Tyson\ Soto=506339
 Suhey\ Diaz-Flores=1065503
+Vincent\ Bruzzi=506134
+Alex\ Xu=1277795
 Vishnu\ Adusumilli=1130467
 Ashlyn\ Brinegar=1321739
 Hnie\ Soh=1291870
@@ -511,15 +563,19 @@ Aayush\ Kawle=506769
 Noah\ Merriwether=1160096
 Maheen\ Ashraf=506982
 Christine\ Ma=1150660
+Boaz\ Wright=1271313
 McKenzie\ Carter=506355
+Judy\ Tu=1320087
 Megha\ Nagalla=480858
 Serena\ John=452554
 Reach\ Mabo=1226654
 Elijah\ Brown=1239518
+Callista\ Bruzzi=1286674
 Alyssa\ Ball=452804
 Elizabeth\ Baker=480647
 Mariana\ Khoury=1293498
 Arnav\ Kunwar=452750
+Madeleine\ Stachera=1314900
 Zorawar\ Sodhi=927326
 Ramkrish\ Velivela=1192212
 Felipe\ Gabriel=1309987
@@ -528,22 +584,26 @@ Xzavier\ Torrejon=1237325
 Sean\ Prabhakar=505886
 Kavin\ Prakash=505942
 Zoe\ Fonda=452444
+Dua\ Naqvi=1304132
+Venya\ Karri=505928
 Saleema\ Idowu=507038
-Mounira\ Hima=506395
 Hadia\ Gul=1330102
+Mounira\ Hima=506395
 Dhyaan\ Vijily=506457
 Pooja\ Arvind=505722
 Addison\ Gardner=452239
 Pragna\ Pothakamuri=1191383
 Vedant\ Bhalla=1207019
 Ovini\ Wijesundera=1150525
+Myiesha\ Padder=506659
 Aparna\ Tangirala=1247886
 Hridaya\ Babu=480776
+Abigail\ Wubneh=1254395
 Valentina\ Perrotta=1139914
 Inaya\ Ahmed=505966
 Stacey\ Sam=1223764
-Khadija\ Abdalla=1243843
 Elizabeth\ Ivanova=480644
+Khadija\ Abdalla=1243843
 Amara\ James=656850
 Sanjay\ Shah=1266545
 Jasman\ Mohil=505897
@@ -551,39 +611,42 @@ Rebecca\ Egana=506245
 Sheri\ Sobhi=506094
 Ayanna\ Ahuja=1308688
 Arman\ Rostami=1283071
-Adhya\ Jay=1276236
 Priya\ Nayak=506102
+Adhya\ Jay=1276236
 Pranaya\ Babu=480775
-Fareeha\ Mahmud=506034
 Tawbon\ Taleghani=481044
+Fareeha\ Mahmud=506034
 Maxwell\ Kimpson=1293149
 Kennedy\ Prescott=1189569
-Layla\ Scott=1130204
 Ashley\ Newman=506722
+Layla\ Scott=1130204
 Leela\ Singh=507130
 Priya\ Khanna=923366
 Shoshanah\ Kriesberg=481481
 Mohamed\ Hussien=506585
-Nivedha\ Srinivas=506184
 Amna\ Babar=506234
+Nivedha\ Srinivas=506184
 Nirmayi\ Menon=1286644
 Rishi\ Patel=506506
 Akul\ Sagare=1308078
-Charlie\ Rollins=452885
+Rajan\ Khanna=923365
 Anahita\ Abianeh=480769
+Charlie\ Rollins=452885
+Hansika\ Vegesna=506426
 Abdulrehman\ Adil=1158722
 Ayesha\ Mirza=506341
 Noh\ Nai=1291914
-Brooke\ Graham=480488
-Trisha\ Rathee=506412
 Bryan\ Tam=1162630
+Trisha\ Rathee=506412
+Brooke\ Graham=480488
 Shresta\ Kasam=480870
 Kavya\ Seralathan=507025
 Mateo\ Oudemans=1272653
 Mikael\ Fasihi=1232613
 Saina\ Fernando=1251326
-Geordan\ Ward=1243886
+Weiz\ Khan=1314644
 Vabie\ Hrei=1291910
+Geordan\ Ward=1243886
 Rose\ Saggese=1299163
 Sevval\ Aydin=1247254
 Sanika\ Zarkar=506893
@@ -598,5 +661,5 @@ Aabhishri\ Soni=480605
 Sathvik\ Chakravarthy=506549
 Aarush\ Bathineni=506830
 Bhavana\ Sri\ Konka=507101
-Mason\ Mozie=1137581
 Ria\ John=506186
+Mason\ Mozie=1137581
