added start/end date input

--- a/automation/student.properties
+++ b/automation/student.properties
@@ -1,4 +1,4 @@
-#Sun Feb 17 15:40:29 EST 2019
+#Sun Feb 17 20:48:22 EST 2019
 Sathvik\ Nuthalapati=1164097
 Abrar\ Hossain=506591
 Candace\ Woods=1213516
@@ -8,6 +8,7 @@ Matthias\ Clarke=1307263
 Eshaan\ Vintha=480864
 Eshal\ Khan=1262924
 Srivathsav\ Sajja=506069
+Kiana\ Parvizi=480843
 Nikita\ Makulov=1183411
 Ethan\ Wentworth=506306
 Maya\ Pulliam=1136907
@@ -87,18 +88,23 @@ Pooja\ Nagabhyru=506193
 Avika\ Agarwal=1227837
 Semhar\ Wright=452461
 Liam\ Anderson=1182626
+Stacy\ Tankeu=480792
+Monisha\ Subramanian=506571
 Sarah\ Blackwell=1063371
 Sebastian\ Clare=505905
 LyLypaw\ Ngia=1290551
+Gavin\ Chung=1154667
 Tahmid\ Niloy=506908
 Chellsea\ Yang=515499
 Sanjna\ Behara=506473
+Keerthi\ Siripurapu=1270260
 Mohammad\ Vahora=506364
 Youshay\ Abbas=1165386
 Gabriela\ Khoury=1291457
 Fahad\ Shayar=506267
 Joel\ Amaya-\ Carpio=1339208
 Joseph\ Schlichting=1144590
+Jacob\ Albert=452717
 Nabeeha\ Abbas=506147
 Aryan\ Vegad=660461
 Adya\ naveen=452786
@@ -123,6 +129,7 @@ Stefanie\ Hickey=452892
 Ria\ Desai=1131387
 Shiv\ Patel=506406
 Benjamin\ Levin-Lozovatsky=506164
+Abhiram\ Ganapathinedi=1347177
 Rod\ Djavan=1306226
 Allison\ Nichols=660505
 Binh-Nguyen\ Nguyen=1232972
@@ -135,6 +142,7 @@ Alina\ Kash=1318537
 Sophia\ Sikander=452843
 Dhruv\ Agarwal=506840
 Fatima\ Abdalla=1235940
+Emma\ Gunter=null
 Sandra\ Zheng=452536
 Yash\ Kumar=1239880
 Leah\ Goldschmidt-Hopkinson=1344836
@@ -171,6 +179,7 @@ Zak\ Abdallah=452617
 Rachel\ Jung=1150807
 Vivaan\ Bendala=1328591
 Zoha\ Qamar=1298291
+Zaniya\ Khan=null
 Namrata\ Dhanireddy=480841
 Nathalia\ Ballew=481018
 Viren\ Sharma=506212
@@ -179,6 +188,7 @@ Charlie\ West=452792
 Sudeep\ Abburu=480624
 John\ Yang=452499
 Smridhi\ Surabhi=1264346
+Youssef\ Megahed=452570
 Marlee\ Brooks-Lucas=1216882
 Hannah\ Lores=452837
 Priyanshi\ Konka=507100
@@ -194,14 +204,16 @@ Charvi\ Kandru=515470
 Abby\ Lorenzo=452888
 Kendall\ McHugh=1307293
 Arjun\ Sood=506753
+Adeeptarshi\ Thakur=661657
 Amelie\ Maloveste=1135472
 Attila\ Juhasz=1162118
 Camille\ Rollins=452886
 Dominic\ Bakos=452383
-Dan\ Yniv=null
+Dan\ Yniv=1187318
 Alina\ Kumar=784027
 Linh-Anh\ Nguyen=1232974
 Sahasra\ Batta=506602
+Subin\ Park=1351532
 Gabriel\ Parker=506378
 Sanah\ Ahmed=505967
 Luciano\ Saggese=1270088
@@ -211,6 +223,7 @@ Tasneem\ Kanchwala=1172596
 Riya\ Mahajan=480797
 Joshua\ Akinladenu=1151684
 Meheruba\ Hossain=506590
+Rishith\ Dathi=1344650
 Leslie\ Lin=506253
 Bron\ Benoy=506861
 Angela\ Farhat=480863
@@ -237,13 +250,16 @@ Alina\ Parikh=480936
 Ojas\ Gajengi=1259775
 Srinandh\ Malkireddy=1303894
 Prithviraj\ Ahirrao=506293
+Jenna\ Ho=506369
 Nimrita\ Bawa=452441
 Ayan\ Singh=1226622
 Ermina\ Khan=507028
+Justin\ Chung=1154666
 Bhavya\ Singh=1279749
 Noora\ Ahmed=452907
 Adriana\ Hanson=1149070
 Rayyan\ Ahmad=506000
+Michael\ Capone=1192549
 Julia\ Herdson=506311
 Aria\ Ma=1336403
 Rahim\ Kamara=480616
@@ -292,6 +308,7 @@ Xavier\ Latham=1211443
 Isabelle\ Skinner=452497
 Agga\ Aung=480768
 Tomohito\ Nair=452856
+Sana\ Sanwal=506525
 Sanaz\ Singh=507131
 Jahnavi\ Das=480900
 Ryan\ Hsieh=1217916
@@ -315,6 +332,7 @@ Miles\ Hornage=1238720
 Colin\ Wiggins=506967
 Juliette\ Schwartz=1259202
 Alexia\ Springer=452191
+Keira\ Chestnut=1270833
 Maya\ Patel=506505
 Hana\ Lee=480878
 Upraj\ Matta=1142281
@@ -370,6 +388,7 @@ Mona\ Kessy=506003
 Jolene\ Murbach=506762
 Alana\ Wright=1176957
 Amir\ Soto=1304204
+Edina\ Townsley=1064090
 Dhruv\ Patel=506407
 Praneel\ Nayak=1152852
 Tarini\ Bandi=1266399
@@ -444,6 +463,7 @@ Dhenuka\ Nagaraj=1201373
 Iman\ Gul=1330105
 Sofia\ Santiago=452880
 Mia\ Manderson=1227789
+Rihanna\ Kamara=480615
 Leon\ Zhang=1222416
 Jacqueline\ Le=480851
 Shagun\ Kang=1258020
@@ -451,6 +471,7 @@ Alexandra\ Fishman=506081
 Dia\ Gill=1322895
 Gopal\ Yegnasubramanian=506697
 Maahir\ Padder=506658
+Nicholas\ Carvalho=null
 Eunjae\ Lee=1316566
 Siddhartha\ Nair=452855
 William\ Skinner=452496
@@ -477,6 +498,7 @@ Jessica\ Jackson=1201382
 Ramisa\ Islam=506068
 Chaeyi\ Kim=1287421
 Farhan\ Shakib=506266
+Sahasra\ Ganapathinedi=1347171
 Adhithya\ Kasiviswanathan=1293488
 David\ Hsieh=452772
 Danielle\ Conklin=452776
@@ -551,19 +573,21 @@ Aarush\ Kejriwal=507074
 Meghan\ Mizrahi=1211620
 Jacob\ Springer=452800
 Ama\ Bolton=480801
-Abel\ Alem=480793
 Nhat\ Le=1308548
+Abel\ Alem=480793
 Joram\ Chai=1236407
 Arabella\ Parello=481057
 Katherine\ Albert=452716
 Eve\ Dougherty=1216355
-Ben\ Maisel=480820
 Cemal\ Cohens=1180786
+Ben\ Maisel=480820
 Aayush\ Kawle=506769
 Noah\ Merriwether=1160096
 Maheen\ Ashraf=506982
+Zayd\ Niazi=1333916
 Christine\ Ma=1150660
 Boaz\ Wright=1271313
+Jaiveer\ Sanwal=506524
 McKenzie\ Carter=506355
 Judy\ Tu=1320087
 Megha\ Nagalla=480858
@@ -573,80 +597,83 @@ Elijah\ Brown=1239518
 Callista\ Bruzzi=1286674
 Alyssa\ Ball=452804
 Elizabeth\ Baker=480647
-Mariana\ Khoury=1293498
 Arnav\ Kunwar=452750
+Mariana\ Khoury=1293498
 Madeleine\ Stachera=1314900
-Zorawar\ Sodhi=927326
 Ramkrish\ Velivela=1192212
+Zorawar\ Sodhi=927326
 Felipe\ Gabriel=1309987
 Ami\ Raithatha=506804
-Xzavier\ Torrejon=1237325
 Sean\ Prabhakar=505886
+Xzavier\ Torrejon=1237325
 Kavin\ Prakash=505942
 Zoe\ Fonda=452444
 Dua\ Naqvi=1304132
+Kethura\ Vallabhaneni=1340751
 Venya\ Karri=505928
 Saleema\ Idowu=507038
-Hadia\ Gul=1330102
 Mounira\ Hima=506395
+Hadia\ Gul=1330102
 Dhyaan\ Vijily=506457
 Pooja\ Arvind=505722
 Addison\ Gardner=452239
 Pragna\ Pothakamuri=1191383
 Vedant\ Bhalla=1207019
-Ovini\ Wijesundera=1150525
+Sophie\ Stjohn=null
 Myiesha\ Padder=506659
+Ovini\ Wijesundera=1150525
 Aparna\ Tangirala=1247886
 Hridaya\ Babu=480776
 Abigail\ Wubneh=1254395
 Valentina\ Perrotta=1139914
 Inaya\ Ahmed=505966
 Stacey\ Sam=1223764
-Elizabeth\ Ivanova=480644
 Khadija\ Abdalla=1243843
+Elizabeth\ Ivanova=480644
 Amara\ James=656850
-Sanjay\ Shah=1266545
-Jasman\ Mohil=505897
 Rebecca\ Egana=506245
+Jasman\ Mohil=505897
+Sanjay\ Shah=1266545
 Sheri\ Sobhi=506094
+Fiona\ Galega=480719
 Ayanna\ Ahuja=1308688
 Arman\ Rostami=1283071
-Priya\ Nayak=506102
 Adhya\ Jay=1276236
+Priya\ Nayak=506102
 Pranaya\ Babu=480775
-Tawbon\ Taleghani=481044
 Fareeha\ Mahmud=506034
+Tawbon\ Taleghani=481044
 Maxwell\ Kimpson=1293149
 Kennedy\ Prescott=1189569
-Ashley\ Newman=506722
 Layla\ Scott=1130204
+Ashley\ Newman=506722
 Leela\ Singh=507130
 Priya\ Khanna=923366
 Shoshanah\ Kriesberg=481481
 Mohamed\ Hussien=506585
-Amna\ Babar=506234
 Nivedha\ Srinivas=506184
+Amna\ Babar=506234
 Nirmayi\ Menon=1286644
 Rishi\ Patel=506506
-Akul\ Sagare=1308078
 Rajan\ Khanna=923365
-Anahita\ Abianeh=480769
+Akul\ Sagare=1308078
 Charlie\ Rollins=452885
+Anahita\ Abianeh=480769
 Hansika\ Vegesna=506426
 Abdulrehman\ Adil=1158722
 Ayesha\ Mirza=506341
 Noh\ Nai=1291914
-Bryan\ Tam=1162630
-Trisha\ Rathee=506412
 Brooke\ Graham=480488
+Trisha\ Rathee=506412
+Bryan\ Tam=1162630
 Shresta\ Kasam=480870
 Kavya\ Seralathan=507025
 Mateo\ Oudemans=1272653
 Mikael\ Fasihi=1232613
 Saina\ Fernando=1251326
 Weiz\ Khan=1314644
-Vabie\ Hrei=1291910
 Geordan\ Ward=1243886
+Vabie\ Hrei=1291910
 Rose\ Saggese=1299163
 Sevval\ Aydin=1247254
 Sanika\ Zarkar=506893
@@ -661,5 +688,6 @@ Aabhishri\ Soni=480605
 Sathvik\ Chakravarthy=506549
 Aarush\ Bathineni=506830
 Bhavana\ Sri\ Konka=507101
-Ria\ John=506186
 Mason\ Mozie=1137581
+Ria\ John=506186
+Sydney\ Ho=506370
